Jan 16, 2023
  updated build.gradle to be gradle 6.x + compatible

Jul 01, 2022
  patch to avoid corruption of AnnotCache

Jun 24, 2022
  renamed distro to 'go-rat-annotation-pipeline'

May 31, 2022
  improved exception reporting

May 23, 2022
  tuned up logging
  
Mar 28, 2022
  updated list of REF_RGD_IDs for GO pipelines to generate correct CREATION_DATE for IEA annotations

Jan 31, 2022
  code simplification
  fixed logging of imported PMIDs

Jan 18, 2022
  updated log4j to avoid zero day exploit

May 11, 2021
  added handling of new field 'ORIGINAL_CREATED_DATE'

May 05, 2021
  fixed handling of creation date for incoming annotations

Apr 23, 2021
  refactored code: all PubMed qc/import code moved to separate class PubMedManager

Mar 17, 2021
  updated source URL for gorel.obo file (used as source of obsolete GO relations)

Dec 17, 2020
- fixed NullPointerException

Nov 24, 2020
- better exception handling

Nov 23, 2020
- incoming file parser replaces MGI:MGI:xxxxxxx with MGI:xxxxxxx
- improved logging

Nov 13, 2020
- added code to load GAF columns 16 and 17 ('annotation extension' and 'gene product form id')
  from source gaf files into table FULL_ANNOT
- optimized bottleneck code by preloading a map of PMID to RefRgdIds

Mar 16, 2020
- refactored code to address 1 out of 4 bottlenecks: isNot4Curation checks

Mar 03, 2020
- refactored code to address major bottleneck: annot checks in RGD
- generated file goa_rgd.txt no longer contains duplicates and is sorted alphabetically

Mar 02, 2020
- tuned up handling of stale annotations:
    if net annot drop could be greater than specified threshold (currently 5%), then abort the deletions and report it

Oct 21, 2019
- fixed potential issue with handling of obsolete annotations

v. 1.4.8, Jan 9, 2019
- updated build.gradle

v. 1.4.7, Nov 19, 2018
- update url for 'import references tool'

v. 1.4.6, Oct 15, 2018
- refactored build.gradle to produce lean runnable jar

v. 1.4.5, Sep 14, 2018